--- a/04_temperature_gauge/server/prometheus.yml
+++ b/04_temperature_gauge/server/prometheus.yml
@@ -37,5 +37,5 @@ scrape_configs:
 - job_name: 'pushgateway'
   honor_labels: true
   static_configs:
-  - targets: ['host.docker.internal:9091']
+  - targets: ['pushgateway:9091']
   
