--- a/04_temperature_gauge/docker-compose.mitmreverseproxy.yaml
+++ b/04_temperature_gauge/docker-compose.mitmreverseproxy.yaml
@@ -2,11 +2,11 @@ services:
     mitmproxy:
         image: mitmproxy/mitmproxy:8.1.1
         volumes:
-            - ./scripts:/scripts
+            - ./mitmscripts/scripts:/scripts
         ports:
             - "8080:8080"
             - "8081:8081"
-        command: [ "mitmweb", "--verbose", "-s", "/scripts/flow-counter.py", "--web-host", "0.0.0.0", "--mode", "reverse:http://prometheus:9090" ]                
+        command: [ "mitmweb", "--verbose", "-s", "/scripts/flow-counter.py", "--web-host", "0.0.0.0", "--mode", "reverse:http://pushgateway:9091" ]                
         networks:
             - overlay
         depends_on:
